[package]
name = "leetcode-rs"
version = "0.1.0" # replace version
description = "Solutions to leetcode in rust"
license = "MIT"
keywords = [
    "leetcode",
]
repository = "https://github.com/EqualMa/leetcode-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
