[package]
name = "solve-leetcode"
version = "1.0.0" # replace version
description = "Solutions to leetcode in rust"
license = "MIT"
keywords = [
    "leetcode",
    "algorithm",
]
repository = "https://github.com/EqualMa/solve-leetcode-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
